<resources>
    <string name="app_name">Timely</string>
    <string name="addTodo">Add ToDo</string>
    <string name="titleAddToDo">Add a New ToDo</string>
    <string name="titleEditToDo">Edit ToDo</string>
    <string name="btnEditToDo">Edit ToDo</string>
    <string name="appVision">Easily Reminds Your Tasks!</string>
    <string name="onclickToRegister">Get Started</string>
    <string name="viewLogUserName">User Name</string>
    <string name="viewLogpass">Password</string>
    <string name="btnSignIn">Sign In</string>
    <string name="viewNewUSer">New User ?</string>
    <string name="viewCreateAcoount">Create An Account</string>
    <string name="addnewWork">+New</string>
    <string name="title_activity_view_schedule_acadermic">viewScheduleAcadermic</string>
    <string name="addNewWork">Add a New Task</string>
    <string name="tagAcadermic">ADD A REMINDER</string>
    <string name="textName">Name</string>
    <string name="Bday">Phone No</string>
    <string name="Username">UserName</string>
    <string name="AcountPass">Password</string>
    <string name="CreateAcount">Create</string>
    <string name="viewName">Name</string>
    <string name="viewDOB">Phone No</string>
    <string name="viewUserName">UserName</string>
    <string name="viewPass">Password</string>
    <string name="name">Name:</string>
    <string name="disphone">PhoneNo:</string>
    <string name="disusername">UserName:</string>
    <string name="disPassword">Password:</string>
    <string name="btnView">View Data</string>
    <string name="btnupdate">Update</string>
    <string name="btndelete">Delete</string>
    <string name="showMsg">Enter Details To Edit/Delete Data with Valid Name!</string>
    <string name="btniInsertList">Insert Data</string>
    <string name="btnUpdateList">Update Data</string>
    <string name="btnDeleteList">Delete Data</string>
    <string name="btnViewList">View Data</string>
    <string name="listTitle">Enter Item Details</string>
    <string name="disTitleTodo">ToDos</string>
    <string name="disTitleList">List</string>
    <string name="disTitleUser">User</string>
</resources>